# hadui-demo-nix

./: .ghci  README.md  default.nix  hadui  hadui.yaml  shell.nix  stack.yaml
demo/: README.md  package.yaml
demo/src/: PoC.hs  Rating.hs  RoadWarrior.hs  StatefulRating.hs
hadui/: hadui-custom.js  rating.html  stateful-rating.html
hadui-demo/: hadui-demo.cabal
